<resources>
    <string name="app_name">曇天気の子</string>
    <string name="tvTitle">曇天気の子</string>
    <string name="tvSubTitle">今から曇るよ</string>
    <string name="btnNewPoint">新規地点登録</string>
    <string name="btnCity">登録地点</string>
    <string name="btnSetting">設定</string>
    <string name="btnDetail">このアプリについて</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="tvNewPointTitle">新規地点登録</string>
    <string name="etCityName">都市名を入力(登録名)</string>
    <string name="etLat">緯度</string>
    <string name="btnMap">地図から参照</string>
    <string name="btnRegister">新規登録</string>
    <string name="btnCurrentLocation">現在地から参照</string>
    <string name="etLng">経度</string>
    <string name="title_activity_search_map">SearchMap</string>
    <string name="tvNothing">登録地点がありません</string>
    <string name="tv1">このアプリについて</string>
    <string name="tv2">曇天気の子</string>
    <string name="tv3">「ねぇ、今から曇るよ」</string>
    <string name="tv4">天野陽菜は逃げ込んだ廃ビルの屋上でそう呟いた。その言葉を飲み込めなかった僕は、空が晴れたのをみて彼女の能力を知ったのだった。例えば、江戸時代、雨が降らなければ、作物は育たず、水を飲むことが難しい人もいただろう。恵みの雨という言葉があるように、雨は彼らの生活にとってなくてはならないものだ。現代でも同じように雨が全く降らなければ、それは一大事だが、あまり良い印象は与えられない。雨が降れば、傘を持ち出し、服は濡れ、交通機関が影響を受けることがある。現代の人間は晴れが好きな人が多いだろう。雨か晴れかで一喜一憂できるほどに、これら二つには一定の注目が集められていることがわかる。それでは曇りはどうだろう。一度くらい曇りにも焦点を当ててみてはいかがだろうか。そんな曇りが始まる前にこのような言葉を投げかけてみてはどうか。</string>
    <string name="tv5">「ねぇ、今から曇るよ」</string>
    <string name="btnNewPointFromReg">新規地点登録画面へ移動</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text6">使い方</string>
    <string name="text7">このアプリは観測地点が</string>
    <string name="text07">曇りそうなとき ”だけ” 通知します。</string>
    <string name="text8">1,</string>
    <string name="text08">新規地点登録画面から</string>
    <string name="text008">必要項目を入力し地点登録をしてください</string>
    <string name="text9">2,</string>
    <string name="text09">登録地点一覧画面から</string>
    <string name="text009_1">曇り状況を観測する地点の選択、</string>
    <string name="text009_2">登録地点の削除ができます</string>
    <string name="text10">3,</string>
    <string name="text010">観測地点が曇りそうな時、通知します</string>
</resources>