<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".NewPoint"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/tvNewPointTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tvNewPointTitle"
        android:textColor="#ffffffff"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCityName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/etCityName"
        android:textColor="#ffffffff"
        android:inputType="textPersonName"
        android:textColorHint="#EAEAEA"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNewPointTitle" />

    <EditText
        android:id="@+id/etLng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/etLng"
        android:textColor="#ffffffff"
        android:inputType="number|textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#EAEAEA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLat" />

    <EditText
        android:id="@+id/etLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/etLat"
        android:inputType="number|textPersonName"
        android:minHeight="48dp"
        android:textColor="#ffffffff"
        android:textColorHint="#EAEAEA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCityName" />

    <Button
        android:id="@+id/btnMap"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="70dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btnMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCurrentLocation"
        app:layout_constraintTop_toBottomOf="@+id/etLng" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginBottom="20dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btnRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnCurrentLocation"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="70dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btnCurrentLocation"
        app:layout_constraintEnd_toStartOf="@+id/btnMap"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLng" />

    <TextView
        android:id="@+id/focusView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/homeButtonNewCity"
        android:layout_width="64dp"
        android:layout_height="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:adjustViewBounds="false"
        android:background="#00000000"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/home_btn" />

    <!--    <com.google.android.gms.ads.AdView-->
<!--        android:id="@+id/adView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentBottom="true"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        app:adSize="BANNER"-->
<!--        app:adUnitId="ca-app-pub-3940256099942544/6300978111"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        tools:ignore="MissingConstraints" />-->

<!--    <FrameLayout-->
<!--        android:id="@+id/fl_NewPoint"-->
<!--        android:layout_width="350dp"-->
<!--        android:layout_height="650dp"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintVertical_bias="0.26"-->
<!--        android:elevation="2dp"-->
<!--        tools:ignore="UnusedAttribute">-->

<!--    </FrameLayout>-->





    <!--    実際の広告IDは以下"ca-app-pub-2529783942153390/2722707931"-->


</androidx.constraintlayout.widget.ConstraintLayout>